--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-/* debug */
-header {
-    background-color: yellow;
-}
-
-footer {
-    background-color: blue;
-}
-/* /debug */
-
 /* common */
 * {
     box-sizing: border-box;
@@ -26,35 +16,48 @@ body {
 }
 
 #container {
-    width: 60%;
-    margin: 40px auto;
+    width: 45%;
+    margin: 20px auto;
 }
 
 main > section {
     width: 100%;
-    height: 250px;
+    height: 200px;
+    margin: 0 auto;
 }
 
 .card {
     float: left;
-    width: calc(25% - 30px);
-    height: calc(250px - 36px);
-    margin: 18px 15px;
+    width: calc(25% - 20px);
+    height: calc(200px - 26px);
+    margin: 13px 10px;
     border-radius: 10px;
     background-color: #FFFFFF;
 }
 
 /* header */
 header {
-    height: 100px;
+    height: 60px;
+    line-height: 60px;
+}
+header > h1 {
+    text-align: center;
+    vertical-align: middle;
+    text-transform: uppercase;
 }
 
 /* main */
 main {
-    height: 750px;
+    height: 600px;
 }
 
 /* footer */
 footer {
-    height: 60px;
+    height: 50px;
+    line-height: 50px;
+}
+footer > h4 {
+    text-align: center;
+    vertical-align: middle;
+    text-transform: uppercase;
 }
