--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,6 @@ body {
     margin: 20px auto;
 }
 
-main > section {
-    width: 100%;
-    height: 200px;
-    margin: 0 auto;
-}
-
 header > h1,
 footer > h4 {
     text-align: center;
@@ -37,17 +31,44 @@ footer > h4 {
 .card {
     float: left;
     width: calc(25% - 20px);
-    height: calc(200px - 26px);
+    height: 174px;
     margin: 13px 10px;
     border-radius: 10px;
+    padding: 10px;
     background-color: white;
-    box-shadow: 2px 2px 2px #7D9BA4;
-    text-shadow: 1px 1px 1px #7D9BA4;
+    box-shadow: 1.5px 1.5px 1.5px #7D9BA4;
+    text-shadow: 1.5px 1.5px 1.5px #7D9BA4;
 }
 .card:not(#card_static) {
     background-image: url('../img/pattern.png');
     background-size: contain;
     background-position: center;
+}
+.card_img:not(#card_static > img) {
+    display: none;
+}
+.card_img {
+    width: 100%;
+    height: 114px;
+    object-fit: contain;
+}
+.card_text:not(#card_static > h3) {
+    display: none;
+}
+.card_text {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    vertical-align: middle;
+    font-size: 25px;
+}
+
+.card:hover > .card_img {
+    cursor: pointer;
+}
+.card:hover .card_text {
+    
 }
 
 /* header */
@@ -57,12 +78,17 @@ header {
     margin-bottom: 25px;
     font-size: 35px;
     color: #FFFFFF;
-    text-shadow: 1px 1px 1px #7D9BA4;
+    text-shadow: 1.5px 1.5px 1.5px #7D9BA4;
 }
 
 /* main */
 main {
     height: 600px;
+}
+main > section {
+    width: 100%;
+    height: 200px;
+    margin: 0 auto;
 }
 
 /* footer */
