--- a/css/style.css
+++ b/css/style.css
@@ -44,16 +44,13 @@ footer > h4 {
     background-size: contain;
     background-position: center;
 }
-.card_img:not(#card_static > img) {
-    visibility: hidden;
-}
 .card_img {
     width: 100%;
     height: 114px;
     object-fit: contain;
 }
-.card_text:not(#card_static > h3) {
-   visibility: hidden;
+.card_img:not(#card_static > img) {
+    visibility: hidden;
 }
 .card_text {
     width: 100%;
@@ -63,6 +60,9 @@ footer > h4 {
     vertical-align: middle;
     font-size: 25px;
 }
+.card_text:not(#card_static > h3) {
+    visibility: hidden;
+ }
 
 .card:not(#card_static):hover{
     cursor: pointer;
@@ -112,6 +112,18 @@ main > section {
     width: 100%;
     height: 200px;
     margin: 0 auto;
+}
+#card_static:hover {
+    cursor: pointer;
+    background-image: url('../img/pattern.png');
+    background-size: contain;
+    background-position: center;
+}
+#card_static:hover .card_img{
+    visibility: hidden;
+}
+#card_static:hover .card_text{
+    visibility: hidden;
 }
 
 /* footer */
